Localization added to login, access controls implemented, finished homepage and styled the datagridviews

--- a/POS System/Login.fr-CA.resx
+++ b/POS System/Login.fr-CA.resx
@@ -57,7 +57,41 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="clockTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>184, 17</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Développé par Matthew R.</value>
+  </data>
+  <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 207</value>
+  </data>
+  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>301, 30</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>des ventes et des stocks</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>252, 30</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Système de gestion </value>
+  </data>
+  <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>60, 17</value>
+  </data>
+  <data name="label5.Text" xml:space="preserve">
+    <value>Langue:</value>
+  </data>
+  <data name="button1.Text" xml:space="preserve">
+    <value>CONNEXION</value>
+  </data>
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>404, 30</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Connectez-vous à votre compte</value>
+  </data>
 </root>
